<resources>
    <string name="app_name">EazySplit Empresas</string>
    <string name="text_name">EAZY÷SPLIT</string>
    <string name="text_company">EMPRESAS</string>
    <string name="button_login">Entrar</string>
    <string name="button_facebook">Entrar com Facebook</string>
    <string name="button_google">Entrar com Google</string>
    <string name="edittext_email">E-mail</string>
    <string name="edittext_password">Senha</string>
    <string name="edittext_company_name">Nome da empresa</string>
    <string name="link_forgotpass">Esqueci minha senha</string>
    <string name="link_register">Cadastrar outro e-mail</string>
    <string name="facebook_app_id">2163680473884245</string>
    <string name="fb_login_protocol_scheme">fb2163680473884245</string>
    <string name="request_id_token">812042450385-2vve0fvmnusplfimlnhrqg4dag6ssmps.apps.googleusercontent.com</string>
    <string name="edittext_company_email">E-mail</string>
    <string name="edittext_password_confirmation">Confirme sua senha</string>
    <string name="edittext_phone">Celular</string>
    <string name="edittext_zipcode">CEP</string>
    <string name="edittext_address">Endereço</string>
    <string name="edittext_address_number">Nº</string>
    <string name="edittext_address_city">Cidade</string>
    <string name="edittext_address_neighborhood">Bairro</string>
    <string name="edittext_address_complement">Complemento</string>
    <string name="button_search">Pesquisar</string>
    <string name="edittext_insert">Incluir</string>
    <string name="edittext_address_state">UF</string>
</resources>
