<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <TextView
                style="@style/header_title"
                android:text="@string/text_name"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

        <TextView
                style="@style/header_title"
                android:text="@string/text_company"
                android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etemail"
                    style="@style/edit_text"
                    android:hint="@string/edittext_email"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

            <EditText
                    android:id="@+id/etsenha"
                    style="@style/edit_text"
                    android:inputType="textPassword"
                    android:hint="@string/edittext_password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btlogin"
                style="@style/button_login"
                android:text="@string/button_login"/>

        <TextView
                android:id="@+id/tvforgotpassword"
                style="@style/text_link"
                android:text="@string/link_forgotpass"
                android:gravity="center"/>

        <Button
                android:id="@+id/btfacebook"
                style="@style/button_facebook" />

        <Button
                android:id="@+id/btgoogle"
                style="@style/button_google"/>

        <TextView
                android:id="@+id/tvotheremail"
                style="@style/text_link"
                android:text="@string/link_register"
                android:gravity="center"/>

    </LinearLayout>
</ScrollView>